plugins/kotlin/idea/tests/testData/checker/codeFragments/primaryConstructorLocal.kt.fragment.k2
local + a + <error descr="[UNRESOLVED_REFERENCE]">c</error> + <error descr="[UNRESOLVED_REFERENCE]">d</error> + <error descr="[UNRESOLVED_REFERENCE]">e</error>